@@ -937,9 +937,12 @@
 ;; (define default-titleblock "title-A4.sym")
 ;; Change "title-A4.sym" by the name of your prefered titleblock!
 ;
-; If you don't want a titleblock to be added automatically, then add the 
-; following line to your gschemrc file (without the semicolon):
+; If you don't want a titleblock to be added automatically, then add one of 
+; the following lines to your gschemrc file (without the semicolon).
+; There are several ways, so just choose one:
 ;   (define default-titleblock "")
+;   (define default-titleblock '())
+;   (define default-titleblock #f)
 ;
 (define default-titleblock "title-B.sym")
 (add-hook! new-page-hook (lambda (page)
